--- a/style.css
+++ b/style.css
@@ -4,3 +4,12 @@
     font-weight: normal;
     text-align: center;
   }
+
+  button {
+    background-color: rgb(0, 0, 0);
+    color: white;
+    border: 1px solid white;
+    margin: 5px;
+    padding: 10px;
+    transition: transform 0.3s ease; /* Add transition for smooth scaling */
+}
